--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
 	<title>Jeff Teste</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width; initial-scale=1, shrink-to-fit=no" />
 	<link rel="shortcut icon" href="assets/img/favicon.png" />
-
-	<!-- CodeMirror -->
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/codemirror.min.css">
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/addon/dialog/dialog.min.css">
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/theme/material.min.css">
-	<!-- Roboto -->
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+	<!-- jQuery -->
+	<script type="text/javascript" src="assets/js/jquery-1.7.2.min.js"></script>
 	<!-- Bootstrap -->
 	<link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css" />
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<!-- Typed -->
+	<script type="text/javascript" src="assets/js/typed.js"></script>
 	<!-- Style -->
 	<link type="text/css" rel="stylesheet" href="assets/css/style.css" />
+
 
 </head>
 
@@ -34,7 +33,7 @@
 
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 						<a class="navbar-brand" href="">Jeff Teste</a>
-						
+
 					</div>
 				</div>
 		</nav>
@@ -45,18 +44,18 @@
 		<!-- header -->
 		<div class="header header-filter">
 			<div class="typed"></div>
-			<div class="row d-flex justify-content-center align-items-center inteiro">
+			<!--<div class="row d-flex justify-content-center align-items-center inteiro">
 					<img class="img-center">
 					<img src="assets/img/favicon.png" style="width:200px; height:200px; left:168px; top:70px; position:absolute;"/>
 					<img src="assets/img/favicon.png" style="width:200px; height:200px; left:1000px; top:70px; position:absolute;"/>
-					</div>
-				</div>
-			</div>
+					</div>-->
 		</div>
+	</div>
+	</div>
 
 	</div>
-<br><br>
-	<div class="container text-light" >
+	<br><br>
+	<div class="container text-light">
 		<header class="text-center">
 			<h1>Conheça um dos Melhores sites</h1>
 			<hr>
@@ -66,7 +65,7 @@
 
 		<footer class="container-fluid" id="rodape">
 			<div class="container d-flex justify-content-center">
-				<img src="assets/images/brasilturismo.png" height="30" />
+				<img src="assets/img/favicon.png" height="30" />
 
 				<span>&nbsp;&nbsp;&copy; 2018 Todos os direitos reservados</span>
 			</div>
@@ -76,14 +75,7 @@
 
 
 
-		<!-- jQuery -->
-		<script type="text/javascript" src="assets/js/jquery-1.7.2.min.js"></script>
-		<!-- Bootstrap -->
-		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-		<!-- Typed -->
-		<script type="text/javascript" src="assets/js/typed.js"></script>
-		<!-- Sitemap Generator -->
-		<script type="text/javascript" src="assets/js/sitemap_generator.js"></script>
+
 		<script>
 			$(document).ready(function () {
 
@@ -99,9 +91,6 @@
 					contentType: 'html'
 				});
 
-				// Run sitemap generator
-				var extract = 'extract.php';
-				$("#sitemap_generator").sitemap_generator(extract);
 			});
 		</script>
 
